--- a/core/templates/core/pumping_form.html
+++ b/core/templates/core/pumping_form.html
@@ -5,16 +5,16 @@
     {% if object %}
         {{ object }}
     {% else %}
-        {% trans "Add a Breastpump Reading" %}
+        {% trans "Add a Pumping Reading" %}
     {% endif %}
 {% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item"><a href="{% url 'core:breastpump-list' %}">{% trans "Breastpump" %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'core:pumping-list' %}">{% trans "Pumping" %}</a></li>
     {% if object %}
         <li class="breadcrumb-item active" aria-current="page">{% trans "Update" %}</li>
     {% else %}
-        <li class="breadcrumb-item active" aria-current="page">{% trans "Add a Breastpump Reading" %}</li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans "Add a Pumping Reading" %}</li>
     {% endif %}
 {% endblock %}
 
@@ -24,7 +24,7 @@
             <h1>Update <span class="text-info">{{ object }}</span></h1>
         {% endblocktrans %}
     {% else %}
-        <h1>{% trans "Add a Breastpump Entry" %}</h1>
+        <h1>{% trans "Add a Pumping Entry" %}</h1>
     {% endif %}
     {% include 'babybuddy/form.html' %}
 {% endblock %}
