--- a/core/templates/core/pumping_confirm_delete.html
+++ b/core/templates/core/pumping_confirm_delete.html
@@ -1,10 +1,10 @@
 {% extends 'babybuddy/page.html' %}
 {% load i18n widget_tweaks %}
 
-{% block title %}{% trans "Delete a Breastpump Reading" %}{% endblock %}
+{% block title %}{% trans "Delete a Pumping Reading" %}{% endblock %}
 
 {% block breadcrumbs %}
-    <li class="breadcrumb-item"><a href="{% url 'core:breastpump-list' %}">{% trans "Breastpump" %}</a></li>
+    <li class="breadcrumb-item"><a href="{% url 'core:pumping-list' %}">{% trans "Pumping" %}</a></li>
     <li class="breadcrumb-item active" aria-current="page">{% trans "Delete" %}</li>
 {% endblock %}
 
@@ -15,6 +15,6 @@
             <h1>Are you sure you want to delete <span class="text-info">{{ object }}</span>?</h1>
         {% endblocktrans %}
         <input type="submit" value="{% trans "Delete" %}" class="btn btn-danger" />
-        <a href="{% url 'core:breastpump-list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
+        <a href="{% url 'core:pumping-list' %}" class="btn btn-default">{% trans "Cancel" %}</a>
     </form>
 {% endblock %}
