Change reading to entry and other PR feedback

--- a/core/templates/core/pumping_confirm_delete.html
+++ b/core/templates/core/pumping_confirm_delete.html
@@ -1,7 +1,7 @@
 {% extends 'babybuddy/page.html' %}
 {% load i18n widget_tweaks %}
 
-{% block title %}{% trans "Delete a Pumping Reading" %}{% endblock %}
+{% block title %}{% trans "Delete a Pumping Entry" %}{% endblock %}
 
 {% block breadcrumbs %}
     <li class="breadcrumb-item"><a href="{% url 'core:pumping-list' %}">{% trans "Pumping" %}</a></li>
