--- a/core/templates/core/pumping_form.html
+++ b/core/templates/core/pumping_form.html
@@ -5,7 +5,7 @@
     {% if object %}
         {{ object }}
     {% else %}
-        {% trans "Add a Pumping Reading" %}
+        {% trans "Add a Pumping Entry" %}
     {% endif %}
 {% endblock %}
 
@@ -14,7 +14,7 @@
     {% if object %}
         <li class="breadcrumb-item active" aria-current="page">{% trans "Update" %}</li>
     {% else %}
-        <li class="breadcrumb-item active" aria-current="page">{% trans "Add a Pumping Reading" %}</li>
+        <li class="breadcrumb-item active" aria-current="page">{% trans "Add a Pumping Entry" %}</li>
     {% endif %}
 {% endblock %}
 
