--- a/core/templates/core/height_list.html
+++ b/core/templates/core/height_list.html
@@ -27,6 +27,7 @@
                         <th>{% trans "Child" %}</th>
                     {% endif %}
                     <th>{% trans "Height" %}</th>
+                    <th>{% trans "Tags" %}</th>
                 </tr>
             </thead>
             <tbody>
@@ -55,15 +56,18 @@
                             <td><a href="{% url 'core:child' height.child.slug %}">{{ height.child }}</a></td>
                         {% endif %}
                         <td>{{ height.height }}</td>
+                        <td>
+                            {% include "core/render_tag_list.html" with tags=height.tags.all %}
+                        </td>
                     </tr>
                     {% if height.notes %}
                         <tr class="{{ row_class }} row-details">
-                            <td colspan="4"><i class="icon-note mr-2" aria-hidden="true"></i>{{ height.notes }}</td>
+                            <td colspan="5"><i class="icon-note mr-2" aria-hidden="true"></i>{{ height.notes }}</td>
                         </tr>
                     {% endif %}
                 {% empty %}
                     <tr>
-                        <th colspan="4">{% trans "No height entries found." %}</th>
+                        <th colspan="5">{% trans "No height entries found." %}</th>
                     </tr>
                 {% endfor %}
             </tbody>
