--- a/dashboard/templates/cards/diaperchange_types.html
+++ b/dashboard/templates/cards/diaperchange_types.html
@@ -17,20 +17,31 @@
 
 {% block content %}
     {% for key, info in stats.items %}
-        {% if info.wet > 0 or info.solid > 0 %}
+        {% if info.wet > 0 or info.solid > 0 or info.empty > 0 %}
             <div class="progress mt-3">
 
                 {% if info.wet_pct > 0 %}
                     <div class="progress-bar bg-primary lead"
                          role="progressbar"
-                         style="width: {{ info.wet_pct|safe }}%;">{{ info.wet|floatformat:'0' }}&nbsp;{% trans "wet" %}</div>
+                         style="width: {{ info.wet_pct|safe }}%;">
+                        {{ info.wet|floatformat:'0' }}&nbsp;{% trans "wet" %}
+                    </div>
                 {% endif %}
 
                 {% if info.solid_pct > 0 %}
                     <div class="progress-bar bg-secondary lead"
                          role="progressbar"
                          style="width: {{ info.solid_pct|safe }}%;">
-                        {{ info.solid|floatformat:'0' }}&nbsp;{% trans "solid" %}</div>
+                        {{ info.solid|floatformat:'0' }}&nbsp;{% trans "solid" %}
+                    </div>
+                {% endif %}
+
+                {% if info.empty_pct > 0 %}
+                    <div class="progress-bar bg-transparent lead"
+                         role="progressbar"
+                         style="width: {{ info.empty_pct|safe }}%;">
+                        {{ info.empty|floatformat:'0' }}
+                    </div>
                 {% endif %}
             </div>
             <div class="text-center text-light small">
