--- a/babybuddy/templates/babybuddy/user_settings_form.html
+++ b/babybuddy/templates/babybuddy/user_settings_form.html
@@ -76,6 +76,14 @@
                 </div>
             </fieldset>
             <fieldset>
+                <legend>{% trans "Other" %}</legend>
+                <div class="form-group row">
+                    {% with form_settings.max_tag_count as field %}
+                        {% include 'babybuddy/form_field.html' %}
+                    {% endwith %}
+                </div>
+            </fieldset>
+            <fieldset>
                 <legend>{% trans "API" %}</legend>
                 <div class="form-group row">
                     <label for="id_email" class="col-sm-2 col-form-label">{% trans "Key" %}</label>
