Update Tempus Dominus to v6 (WIP)

--- a/babybuddy/templates/babybuddy/form_field.html
+++ b/babybuddy/templates/babybuddy/form_field.html
@@ -18,16 +18,20 @@
             </label>
         </div>
     {% elif field|field_type == "datetimefield" or field|field_type == "datefield" %}
-        <div class="input-group input-group-lg datetimepicker" id="datetimepicker_{{ field.name }}" data-target-input="nearest">
-            <div class="input-group-prepend px-2 rounded-left bg-dark" data-target="#datetimepicker_{{ field.name }}" data-toggle="datetimepicker">
-                <span class="input-group-text"><i class="icon-calendar"></i></span>
-            </div>
-            {% if field.errors %}
+         <div class="input-group input-group-lg datetimepicker"
+              id="datetimepicker_{{ field.name }}"
+              data-td-target-input="nearest"
+              data-td-target-toggle="nearest">
+             <span class="input-group-text"
+                   data-td-target="#datetimepicker_{{ field.name }}"
+                   data-td-toggle="datetimepicker"><i class="icon-calendar"></i></span>
+             {% if field.errors %}
                 {{ field|add_class:"datetimepicker-input form-control form-control-lg is-invalid" }}
             {% else %}
                 {{ field|add_class:"datetimepicker-input form-control form-control-lg" }}
             {% endif %}
-        </div>
+         </div>
+ </div>
     {% elif 'choice' in field|field_type %}
         {% if field.errors %}
             {{ field|add_class:"custom-select is-invalid" }}
