--- a/babybuddy/static_src/scss/babybuddy.scss
+++ b/babybuddy/static_src/scss/babybuddy.scss
@@ -2,7 +2,8 @@
 @import 'variables';
 @import 'mixins';
 @import '../../../node_modules/bootstrap/scss/bootstrap';
-@import '../../../node_modules/tempusdominus-bootstrap-4/src/sass/tempusdominus-bootstrap-4';
+@import '../../../node_modules/@eonasdan/tempus-dominus/src/sass/variables';
+@import '../../../node_modules/@eonasdan/tempus-dominus/src/sass/tempus-dominus';
 
 @import '../../../**/static_src/scss/*';
 @import '../fontello/css/babybuddy';
