--- a/core/templates/core/sleep_form.html
+++ b/core/templates/core/sleep_form.html
@@ -31,12 +31,7 @@
 
 {% block javascript %}
     <script type="text/javascript">
-        BabyBuddy.DatetimePicker.init($('#datetimepicker_start'), {
-            defaultDate: false,
-            format: '{% datetimepicker_format %}'
-        });
-        BabyBuddy.DatetimePicker.init($('#datetimepicker_end'), {
-            format: '{% datetimepicker_format %}'
-        });
+        BabyBuddy.DatetimePicker.init($('#datetimepicker_start'), { useCurrent: false });
+        BabyBuddy.DatetimePicker.init($('#datetimepicker_end'));
     </script>
 {% endblock %}
