--- a/core/templates/core/timer_form.html
+++ b/core/templates/core/timer_form.html
@@ -26,8 +26,6 @@
 
 {% block javascript %}
     <script type="text/javascript">
-        BabyBuddy.DatetimePicker.init($('#datetimepicker_start'), {
-            format: '{% datetimepicker_format 'L LTS' %}'
-        });
+        BabyBuddy.DatetimePicker.init($('#datetimepicker_start'));
     </script>
 {% endblock %}
