--- a/core/templates/core/feeding_form.html
+++ b/core/templates/core/feeding_form.html
@@ -31,8 +31,8 @@
 
 {% block javascript %}
     <script type="text/javascript">
-        BabyBuddy.DatetimePicker.init($('#datetimepicker_start'));
-        BabyBuddy.DatetimePicker.init($('#datetimepicker_end'));
+        BabyBuddy.DatetimePicker.init(document.getElementById('datetimepicker_start'));
+        BabyBuddy.DatetimePicker.init(document.getElementById('datetimepicker_end'));
         $('#id_type').change(function() {
             var feed_type=$('#id_type').val();
             if (feed_type === 'formula' || feed_type === 'fortified breast milk') {
