--- a/core/templates/core/note_form.html
+++ b/core/templates/core/note_form.html
@@ -31,6 +31,6 @@
 
 {% block javascript %}
     <script type="text/javascript">
-        BabyBuddy.DatetimePicker.init($('#datetimepicker_time'));
+        BabyBuddy.DatetimePicker.init(document.getElementById('#datetimepicker_time'));
     </script>
 {% endblock %}
