--- a/core/templates/core/timer_form.html
+++ b/core/templates/core/timer_form.html
@@ -26,6 +26,6 @@
 
 {% block javascript %}
     <script type="text/javascript">
-        BabyBuddy.DatetimePicker.init($('#datetimepicker_start'));
+        BabyBuddy.DatetimePicker.init(document.getElementById('datetimepicker_start'));
     </script>
 {% endblock %}
