--- a/core/templates/core/weight_form.html
+++ b/core/templates/core/weight_form.html
@@ -31,7 +31,7 @@
 
 {% block javascript %}
     <script type="text/javascript">
-        BabyBuddy.DatetimePicker.init($('#datetimepicker_date'), {
+        BabyBuddy.DatetimePicker.init(document.getElementById('datetimepicker_date'), {
             format: 'L',
             extraFormats: ['YYYY-MM-DD']
         });
